# rust-yew-app

./: .gitignore  Cargo.toml  tailwind.config.ts
src/: main.rs
src/pages/: home.rs
