[package]
name = "rust-yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.9.0"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1"
gloo = "0.10"